[project]
name = "raizac-streamlit-pandas"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "geopy>=2.4.1",
    "matplotlib>=3.10.7",
    "pandas==2.3.3",
    "pandas-stubs==2.3.2.250926",
    "plotly>=6.3.1",
    "protobuf>=6.32.1",
    "pyarrow==21.0.0",
    "urllib3>=2.5.0",
]
